--- a/index.html
+++ b/index.html
@@ -555,6 +555,7 @@ function applyNaturalLanguageFilter() {
 function clearNaturalLanguageFilter() {
   nlFilters = [];
   document.getElementById("nlQuery").value = "";
+  document.getElementById("nlSummary").value = "";
   table.draw();
 }
     document.addEventListener("DOMContentLoaded", function () {
@@ -1263,6 +1264,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
