--- a/index.html
+++ b/index.html
@@ -179,6 +179,98 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+    .ai-query-card {
+  margin: 25px auto;
+  padding: 18px 22px;
+  max-width: 1100px;
+  background: linear-gradient(135deg, #f8fbff, #eef5ff);
+  border-left: 6px solid #0056a6;
+  border-radius: 10px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+}
+
+.ai-header {
+  font-size: 20px;
+  font-weight: bold;
+  color: #0056a6;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.ai-badge {
+  background: #ff9800;
+  color: white;
+  font-size: 12px;
+  padding: 3px 8px;
+  border-radius: 12px;
+}
+
+.ai-subtext {
+  font-size: 14px;
+  color: #444;
+  margin: 6px 0 12px;
+  font-style: italic;
+}
+
+.ai-input-row {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.ai-input-row input {
+  flex: 1;
+  padding: 10px 12px;
+  font-size: 15px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+
+.ai-input-row button {
+  padding: 9px 14px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  background: #0056a6;
+  color: white;
+}
+
+.ai-input-row button.secondary {
+  background: #e0e0e0;
+  color: #333;
+}
+
+.ai-input-row button:hover {
+  opacity: 0.9;
+}
+
+.ai-examples {
+  margin-top: 10px;
+  font-size: 13px;
+  color: #555;
+}
+
+.ai-examples span {
+  background: #eaf2ff;
+  border: 1px solid #c5dcff;
+  padding: 4px 8px;
+  border-radius: 12px;
+  margin-left: 6px;
+  cursor: pointer;
+}
+
+.ai-examples span:hover {
+  background: #d6e8ff;
+}
+
+.ai-summary {
+  margin-top: 12px;
+  font-size: 14px;
+  color: #333;
+  font-weight: 500;
+}
+
   </style>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
@@ -1295,6 +1387,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
