--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
   </div>
 
   <div class="ai-examples">
-    Try:<br>
-    <span>Share exim data for commodities having import growth greater than 10%</span><br>
+    Try:
+    <span>Share exim data for commodities having import growth greater than 10%</span>
     <span>Tell all commodities having import/export ratio lower than 100</span>
      </div>
 
@@ -1386,6 +1386,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
