--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@ if (colInfo.type === "text") {
   });
 
   console.log("Parsed NLP:", nlFilters);
+  console.log("Parsed NLP filters:", JSON.stringify(nlFilters, null, 2));
 }
 
 
@@ -1472,6 +1473,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
