--- a/index.html
+++ b/index.html
@@ -474,7 +474,12 @@
   <div class="ai-subtext">
     Ask in plain English. No filters. No formulas.
   </div>
-
+ <div class="ai-examples">
+    Try:
+    <span>Share exim data for commodities having import growth greater than 10%. Arrange import price in descending order</span>
+    <span>Tell all commodities having import/export ratio lower than 100 and last year import >25 million$</span>
+   <span>Provide import export data for all commodities for which commodity name containing petrol</span>
+     </div>
   <div class="ai-input-row">
     <input type="text" id="nlQuery"
       placeholder="Ask like chatgpt. for e.g. Provide data for commodities having fy25 import value more than 100 million$ and export price < 10$/unit"
@@ -483,11 +488,7 @@
     <button class="secondary" onclick="clearNaturalLanguageFilter()">Clear</button>
   </div>
 
-  <div class="ai-examples">
-    Try:
-    <span>Share exim data for commodities having import growth greater than 10%</span>
-    <span>Tell all commodities having import/export ratio lower than 100</span>
-     </div>
+ 
 
   <div id="nlSummary" class="ai-summary"></div>
 </div>
@@ -1524,6 +1525,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
