--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
   padding: 4px 8px;
   border-radius: 12px;
   margin-left: 6px;
+  margin-top: 6px;
   cursor: pointer;
 }
 
@@ -1525,6 +1526,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
