--- a/index.html
+++ b/index.html
@@ -252,12 +252,14 @@
 }
 
 .ai-examples span {
+   display: inline-block;
+  margin: 4px 6px 4px 0;
+   line-height: 1.4;
   background: #eaf2ff;
   border: 1px solid #c5dcff;
-  padding: 10px 8px;
+  padding: 4px 8px;
   border-radius: 12px;
-  margin-left: 6px;
-  margin-top: 6px;
+  margin-left: 6px;  
   cursor: pointer;
 }
 
@@ -1526,6 +1528,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
