--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
   100% { transform: rotate(360deg); }
 }
     .ai-query-card {
+       position: relative;   /* 🔥 REQUIRED */
   margin: 25px auto;
   padding: 18px 22px;
   max-width: 1100px;
@@ -528,7 +529,7 @@ function closeAI() {
     Try:
     <span>Share exim data for commodities having import growth greater than 10%. Arrange import price in descending order</span>
     <span>Tell all commodities having import/export ratio lower than 100 and last year import >25 million$</span>
-   <span>Provide import export data for all commodities for which commodity name contains petrol</span>
+   <span>Provide data for all commodities for which commodity name contains petrol</span>
      </div>
   <div class="ai-input-row">
     <input type="text" id="nlQuery"
@@ -1575,6 +1576,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
