--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
   position: absolute;
   top: 10px;
   right: 12px;
-  background: transparent;
+  background: red;
   border: none;
   font-size: 18px;
   cursor: pointer;
@@ -1576,6 +1576,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
