--- a/index.html
+++ b/index.html
@@ -328,6 +328,10 @@
 </header>
 <!-- Horizontal Tabs -->
 <div style="display:flex; justify-content:center; gap:20px; margin:20px 0;">
+    <button onclick="openAI()">
+      style="padding:10px 20px; background:#fc44e7; color:white; border:none; border-radius:6px; cursor:pointer;">
+  🤖 Smart Search with AI
+</button>
   <button onclick="openModal('aboutModal')" 
           style="padding:10px 20px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
     🌍 About SISEBI
@@ -1576,6 +1580,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
